@@ -1,5 +1,0 @@
-<?xml version="1.0"?>
-<object name=".cps_portlets" meta_type="CPS Placeful Portlets Container">
- <object name="portlet_portal_status_message" meta_type="CPS Portlet"
-   portal_type="Custom Portlet"/>
-</object>
