@@ -15,6 +15,7 @@ Bug fixes
 - #2089: export from CPSSkins: formatting the output
 - #2076: export from CPSSkins: problems with non ascii-chars outside of portlets
 - #2045: Absolute path to themes container is persistent
+- #2024: Moved portal_status_message portlet to CPSDefault
 - #2034: provide "cherry picking" theme negociator
 - #2032: removal of main content element if main content is empty
 - #2031: wrong ordering of javascript inclusions
